cluster/apps/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: jonaswinkler/paperless-ng:1.5.0
        ports:
        - name: paperless
          containerPort: 8000
        volumeMounts:
          - mountPath: /usr/src/paperless/data
            name: data
          - mountPath: /usr/src/paperless/media
            name: media
          - mountPath: /usr/src/paperless/consume
            name: consume
      - name: redis
        image: redis:6.2
      nodeSelector:
        node-role.kubernetes.io/worker: worker
      volumes:
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
